src/test/compile-fail/bad-main.rs
// xfail-stage1
// xfail-stage2
// xfail-stage3
// error-pattern: bad type signature

fn main(x: int) { }